manual: change page title

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -9,7 +9,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Game Engine</title>
+	<title>Retro Space Shooter</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link id="css" rel="stylesheet" href="css.css"/ >
 	<script type="text/javascript" src="DebugLogger.js"></script>
