--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -133,7 +133,36 @@
 		}
 
 		function gameOver() {
-			gameState.currentState = null; // No longer in active gameplay
+			// Spawn large explosion at player position
+			const playerColor = "100, 200, 255"; // Blue color for player ship
+			const explosionSize = 60; // Much larger than normal explosions (24)
+			const minSpeed = 0.05;
+			const maxSpeed = 0.25;
+			const lifetime = 1200; // Longer lasting particles
+			const minSize = 3;
+			const maxSize = 8;
+
+			for (let i = 0; i < explosionSize; i++) {
+				const angle = (Math.PI * 2 * i) / explosionSize + (Math.random() - 0.5) * 0.5;
+				const speed = minSpeed + Math.random() * (maxSpeed - minSpeed);
+				const velocity = new Vector2D(
+					Math.cos(angle) * speed,
+					Math.sin(angle) * speed
+				);
+				const size = minSize + Math.random() * (maxSize - minSize);
+
+				gameState.particleSystem.particles.push(new Particle(
+					new Vector2D(gameState.player.sprite.position.x, gameState.player.sprite.position.y),
+					velocity,
+					lifetime,
+					size,
+					playerColor
+				));
+			}
+
+			// Keep game running but mark player as dead
+			gameState.player.isDead = true;
+
 			musicPlayer.stop();
 			setCursorVisibility(true);
 			showGameOverMenu();
@@ -186,7 +215,7 @@
 
 
 		function showGameOverMenu() {
-			setMenuOverlayMode(false); // Opaque overlay with background
+			setMenuOverlayMode(true); // Transparent overlay - show game behind
 
 			let playerName = '';
 
@@ -525,8 +554,10 @@
 			// Particles
 			gameState.particleSystem.draw(context);
 
-			// Player last (top layer)
-			gameState.player.draw();
+			// Player last (top layer) - don't draw if dead
+			if (!gameState.player.isDead) {
+				gameState.player.draw();
+			}
 
 			context.restore();
 
@@ -852,24 +883,27 @@
 			// Accumulate game time (only advances during gameplay, not when paused)
 			gameState.gameTime += deltaTime;
 
-			if (engine.keyDown["ArrowLeft"]) {
-				gameState.player.turnLeft(deltaTime);
-			}
-			if (engine.keyDown["ArrowRight"]) {
-				gameState.player.turnRight(deltaTime);
-			}
-			if (engine.keyDown["ArrowUp"]) {
-				gameState.player.accelerate(deltaTime);
-			}
-			if (engine.keyDown["ArrowDown"]) {
-				gameState.player.reverseThrust(deltaTime);
-			}
-			if (engine.keyDown[" "]) {
-				shoot();
-			}
+			// Only process player input if player is alive
+			if (!gameState.player.isDead) {
+				if (engine.keyDown["ArrowLeft"]) {
+					gameState.player.turnLeft(deltaTime);
+				}
+				if (engine.keyDown["ArrowRight"]) {
+					gameState.player.turnRight(deltaTime);
+				}
+				if (engine.keyDown["ArrowUp"]) {
+					gameState.player.accelerate(deltaTime);
+				}
+				if (engine.keyDown["ArrowDown"]) {
+					gameState.player.reverseThrust(deltaTime);
+				}
+				if (engine.keyDown[" "]) {
+					shoot();
+				}
 
-			gameState.player.update(deltaTime);
-			gameState.player.updateShieldRegen(deltaTime); // Update shield regeneration
+				gameState.player.update(deltaTime);
+				gameState.player.updateShieldRegen(deltaTime); // Update shield regeneration
+			}
 
 			// Update all NPCs with unified loop
 			for (const npc of gameState.npcs) {
@@ -951,59 +985,63 @@
 				}
 			}
 
-			// Check player-NPC collisions (unified loop)
-			for (const npc of gameState.npcs) {
-				if (CollisionDetection.checkAABB(gameState.player, npc)) {
-					npcsToRemove.add(npc);
+			// Check player-NPC collisions (unified loop) - only if player is alive
+			if (!gameState.player.isDead) {
+				for (const npc of gameState.npcs) {
+					if (CollisionDetection.checkAABB(gameState.player, npc)) {
+						npcsToRemove.add(npc);
 
-					const collisionResult = npc.onCollideWithPlayer();
-					DebugLogger.log(`Player-NPC collision! NPC type: ${npc.constructor.name}, NPC health: ${npc.health}, collision damage: ${collisionResult.damage}, player health before: ${gameState.player.health}`);
+						const collisionResult = npc.onCollideWithPlayer();
+						DebugLogger.log(`Player-NPC collision! NPC type: ${npc.constructor.name}, NPC health: ${npc.health}, collision damage: ${collisionResult.damage}, player health before: ${gameState.player.health}`);
 
-					// Handle NPC destruction (score, particles, centurion achievement)
-					handleNPCDestroyed(npc);
+						// Handle NPC destruction (score, particles, centurion achievement)
+						handleNPCDestroyed(npc);
 
-					// Apply damage to player
-					gameState.player.health -= collisionResult.damage;
-					gameState.player.onDamage(); // Reset shield regen timer
-					DebugLogger.log(`Player health after: ${gameState.player.health}`);
+						// Apply damage to player
+						gameState.player.health -= collisionResult.damage;
+						gameState.player.onDamage(); // Reset shield regen timer
+						DebugLogger.log(`Player health after: ${gameState.player.health}`);
 
-					if (collisionResult.sound) {
-						playSoundEffect(collisionResult.sound, collisionResult.volume);
+						if (collisionResult.sound) {
+							playSoundEffect(collisionResult.sound, collisionResult.volume);
+						}
+
+						// Track collision kills for demolition_derby achievement
+						achievementManager.progress('demolition_derby', 1);
+
+						// Track damage taken for untouchable achievement
+						gameState.achievementStats.damageTakenThisWave += collisionResult.damage;
 					}
-
-					// Track collision kills for demolition_derby achievement
-					achievementManager.progress('demolition_derby', 1);
-
-					// Track damage taken for untouchable achievement
-					gameState.achievementStats.damageTakenThisWave += collisionResult.damage;
 				}
 			}
 
-			// Check NPC projectile-player collisions (unified loop)
-			for (const projectile of gameState.npcProjectiles) {
-				if (CollisionDetection.checkAABB(gameState.player, projectile)) {
-					npcProjectilesToRemove.add(projectile);
+			// Check NPC projectile-player collisions (unified loop) - only if player is alive
+			if (!gameState.player.isDead) {
+				for (const projectile of gameState.npcProjectiles) {
+					if (CollisionDetection.checkAABB(gameState.player, projectile)) {
+						npcProjectilesToRemove.add(projectile);
 
-					const hitResult = projectile.onHitPlayer();
-					gameState.player.health -= hitResult.damage;
-					gameState.player.onDamage(); // Reset shield regen timer
-					DebugLogger.log(`Player hit by projectile! Health: ${gameState.player.health}`);
+						const hitResult = projectile.onHitPlayer();
+						gameState.player.health -= hitResult.damage;
+						gameState.player.onDamage(); // Reset shield regen timer
+						DebugLogger.log(`Player hit by projectile! Health: ${gameState.player.health}`);
 
-					if (hitResult.sound) {
-						playSoundEffect(hitResult.sound, hitResult.volume);
+						if (hitResult.sound) {
+							playSoundEffect(hitResult.sound, hitResult.volume);
+						}
+
+						if (hitResult.particleColor) {
+							gameState.particleSystem.spawnExplosion(projectile.sprite.position, hitResult.particleColor);
+						}
+
+						// Track damage taken for untouchable achievement
+						gameState.achievementStats.damageTakenThisWave += hitResult.damage;
 					}
-
-					if (hitResult.particleColor) {
-						gameState.particleSystem.spawnExplosion(projectile.sprite.position, hitResult.particleColor);
-					}
-
-					// Track damage taken for untouchable achievement
-					gameState.achievementStats.damageTakenThisWave += hitResult.damage;
 				}
 			}
 
-			// Check player-wormhole collision (show upgrade menu)
-			if (gameState.wormhole && CollisionDetection.checkCircle(gameState.wormhole, gameState.player)) {
+			// Check player-wormhole collision (show upgrade menu) - only if player is alive
+			if (!gameState.player.isDead && gameState.wormhole && CollisionDetection.checkCircle(gameState.wormhole, gameState.player)) {
 				showUpgradeMenu();
 				playSoundEffect('achievement', 0.5); // Play a sound effect
 			}
@@ -1013,10 +1051,10 @@
 			gameState.playerProjectiles = gameState.playerProjectiles.filter(projectile => !playerProjectilesToRemove.has(projectile));
 			gameState.npcProjectiles = gameState.npcProjectiles.filter(projectile => !npcProjectilesToRemove.has(projectile));
 
-			// Check for game over
-			if (gameState.player.health <= 0) {
+			// Check for game over - only trigger once
+			if (!gameState.player.isDead && gameState.player.health <= 0) {
 				gameOver();
-				return;
+				// Don't return - let the game continue running
 			}
 
 			// Wrap NPCs that go beyond minimap bounds, despawn projectiles
@@ -1036,6 +1074,11 @@
 		}
 
 		function checkGamepadInput(deltaTime) {
+			// Don't process gamepad input if player is dead
+			if (gameState.player.isDead) {
+				return;
+			}
+
 			const gamepads = navigator.getGamepads();
 			const deadzone = GameConfig.PLAYER.GAMEPAD_DEADZONE; // Ignore small stick movements to prevent drift
 
